--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>New code changed</h3>
     <p>More paragraph</p>
     <small>this is small</small>
+    <img src="wallpapersden.com_call-of-duty-black-ops-cold-war-4k-gaming_3840x2160.jpg" alt="">
+    <img src="wp1929369-into-the-wild-wallpapers.png" alt="">
 </body>
 </html>
